--- a/Website/app/index.html
+++ b/Website/app/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="images/chat.png" />
+    <link rel="shortcut icon" href="public/images/chat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-	<link rel="manifest" href="manifest.json" />
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="manifest" href="public/manifest.json" />
+	<link rel="stylesheet" href="public/css/index.css">
     <title>Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="margin: 0;height: 100%;width: 100%;"></div>
-    <script src="bundle.js" type="text/javascript"></script>
+    <script src="public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
